--- a/Relatividad Especial/Tarea1/Header_original.tex
+++ b/Relatividad Especial/Tarea1/Header_original.tex
@@ -16,14 +16,14 @@
 \begin{tabulary}{20cm}{LLCRR}
 \multirow{4}{2.3cm}{\includegraphics[scale=0.13]{/home/diego/Documents/Licenciatura/LatexBasic/ECFM.pdf}} & Universidad de San Carlos de Guatemala  & & & \multirow{4}{4.5cm}{\hfill \includegraphics[scale=0.082]{/home/diego/Documents/Licenciatura/LatexBasic/USAC.pdf}}\tabularnewline
  & Escuela de Ciencias Físicas y Matemáticas & \hfill &  & \tabularnewline
- & Mecánica Cuántica 1 & \hfill ~~ &   & \tabularnewline
+ & Relatividad Especial & \hfill ~~ &   & \tabularnewline
  & Diego Sarceño 201900109 & &  & \tabularnewline
  & \today &  & & \tabularnewline
 \end{tabulary}\\[0.75cm]
 
 {\hrule height 1.5pt} \vspace{0.1cm}
-\begin{tabulary}{21cm}{p{3.5cm}p{15.5cm}p{2cm}}
-    \hfill & \huge{\scshape{Mecánica Cuántica 1}} & \hfill
+\begin{tabulary}{21cm}{p{5.5cm}p{11.5cm}p{2cm}}
+    \hfill & \huge{\scshape{Tarea 1}} & \hfill
 \end{tabulary}
 {\hrule height 1.5pt} 
 \vspace{0.5cm}
