--- a/Relatividad Especial/Tarea1/notasClase.tex
+++ b/Relatividad Especial/Tarea1/notasClase.tex
@@ -4,8 +4,8 @@
 \usepackage{fancyhdr}%formato de pagina
 \pagestyle{fancy}%colocar la pagina con el formato deseado
 \fancyhead{}
-\fancyhead[L]{\footnotesize{Análisis de Variable Compleja 1}}
-\fancyhead[C]{Notas de Clase}
+\fancyhead[L]{\footnotesize{Relatividad Especial}}
+\fancyhead[C]{Tarea 1}
 \fancyhead[R]{\footnotesize{\thepage}}
 %\fancyhead[LO,RE]{Cálculo 3}
 %\fancyhead[RO,LE]{\footnotesize{\thepage}}
