--- a/Programación Matemática 2/Resumen/Header_original.tex
+++ b/Programación Matemática 2/Resumen/Header_original.tex
@@ -22,8 +22,8 @@
 \end{tabulary}\\[0.75cm]
 
 {\hrule height 1.5pt} \vspace{0.1cm}
-\begin{tabulary}{21cm}{p{5cm}p{12cm}p{2cm}}
-    \hfill & \huge{\scshape{Práctica 1}} & \hfill
+\begin{tabulary}{21cm}{p{3.5cm}p{13.5cm}p{2cm}}
+    \hfill & \huge{\scshape{Práctica 1 Semana 1}} & \hfill
 \end{tabulary}
 {\hrule height 1.5pt} 
 \vspace{0.5cm}
