--- a/Estadística/ApuntesDeClase/content.tex
+++ b/Estadística/ApuntesDeClase/content.tex
@@ -104,3 +104,44 @@ Haciendo la analogía, $\Omega$ es el espacio muestral, $\mathscr{F}$ son los ev
 \begin{definicion}
 	Sea $S$ una colección de subconjuntos de $\Omega$, entonces la $\sigma -$álgebra generada por $S$ es la menor $\sigma -$álgebra que contiene a $S$.
 \end{definicion}
+
+
+
+\begin{definicion}
+	Sea $\mathscr{C}$ una colección no vacía de subconjuntos de $\Omega$. La $\sigma -$álgebra generada por $\mathscr{C}$, denotada por $\sigma (\mathscr{C})$, es la colección 
+		$$\sigma (\mathscr{C}) = \{ \mathscr{F}:\mathscr{F} \quad \sigma -\text{álgebra con } \mathscr{C}\subseteq \mathscr{F} \}$$
+\end{definicion}
+
+
+
+\begin{definicion}
+	{\scshape{Álgebra.}} Una colección $\mathscr{A}$ de subconjuntos de $\Omega$ es una álgebra si cumple las siguientes condiciones:
+	\begin{enumerate}
+		\item $\Omega \in \mathscr{A}$.
+		\item Si $A \in \mathscr{A}$, entonces $A^c \in \mathscr{A}$.
+		\item Si $A_1 ,\ldots , A_n \in \mathscr{A}$, entonces $\displaystyle\bigcup _{k=1} ^n A_k \in \mathscr{A}$.
+	\end{enumerate}
+\end{definicion}
+Las $\sigma -$álgebra son subconjuntos de las álgebras.
+
+\begin{definicion}
+	{\scshape{Semiálgebra.}} Una colección $\mathscr{S}$ de subconjuntos de $\Omega$ es una semiálgebraa si cumple las siguientes condiciones:
+	\begin{enumerate}
+		\item $\Omega \in \mathscr{S}$.
+		\item Si $A,B\in \mathscr{S}$, entonces $A\cap B \in \mathscr{S}$.
+		\item Si $A,A_1 \in \mathscr{S}$ son tales que $A_1 \subseteq A$, entonces existen $A_2 ,\ldots ,A_n \in \mathscr{S}$ tales que los subconjuntos $A_1 ,\ldots ,A_n$ son ajenos dos a dos y se cumple que
+			$$A = \bigcup _{k=1} ^n A_k .$$
+	\end{enumerate}
+\end{definicion}
+
+
+
+
+
+
+
+
+
+
+
+
