--- a/Mecánica Cuántica/ResumenArtículos/informe.tex
+++ b/Mecánica Cuántica/ResumenArtículos/informe.tex
@@ -11,7 +11,7 @@
 %pdfsubject={Proyecto},%
 %pdfkeywords={template, template}]{hyperref}
 
-\title{\sc Resumen de 8 Artículos de arXiv qtm-ph}%
+\title{\sc Resumen Artículos del arXiv qtm-ph}%
 \author{Diego Sarceño \\ $201900109$}
 \date{Guatemala, \today}
 %% 20210307
@@ -19,22 +19,49 @@
 \begin{document}  
 \maketitle
 
-\begin{abstract}
-  \lipsum[1]
-\end{abstract}
+%\begin{abstract}
+%  \lipsum[1]
+%\end{abstract}
 
 
-\section{Introducción}
-\label{sec:intro}
-\justify 
-\lipsum[1]	
+%\section{Introducción}
+%\label{sec:intro}
+%\justify 
+%\lipsum[1]	
 
 
-\section{Puntos de Lagrange}
+\section{Erasure tolerant quantum memory and the quantum null energy condition in holographic systems (\textit{arXiv: 2202.00022v1})}
 \justify
 %\noindent
-\lipsum[1-5]
+\lipsum[1]
 
+\section{Algebraic Bethe Circuits (\textit{arXiv: 2202.04673v1})}
+\justify
+\lipsum[1]
+
+\section{Self$-$Adjointness of Toeplitz Operators on the Segal$-$Bargmann Space (\textit{arXiv: 2202.04687v1})}
+\justify
+\lipsum[1]
+
+\section{ (\textit{arXiv: })}
+\justify
+\lipsum[1]
+
+\section{ (\textit{arXiv: })}
+\justify
+\lipsum[1]
+
+\section{ (\textit{arXiv: })}
+\justify
+\lipsum[1]
+
+\section{ (\textit{arXiv: })}
+\justify
+\lipsum[1]
+
+\section{ (\textit{arXiv: })}
+\justify
+\lipsum[1]
 
 
 \section{Anexos}
