--- a/Mecánica Cuántica/CosasImportantes/content.tex
+++ b/Mecánica Cuántica/CosasImportantes/content.tex
@@ -31,7 +31,25 @@ donde $\hat{H}$ es el operador hamiltoniano, el cual corresponde a la energía t
 
 
 
+\section{Observables y Operadores}
 
+\begin{table}[H]
+	\centering
+	\begin{tabular}{cc}
+		\hline
+		\hline
+		Osbservable & Operador \\
+		\hline
+		\hline
+		$\vec{r}$ & $\hat{R}$ \\
+		$\vec{p}$ & $\hat{P} = -i\hbar \gradient$ \\
+		$T=\frac{p^2}{2m}$ & $\hat{T} = -\frac{'\hbar ^2}{2m} \laplacian$ \\
+		$E=\frac{p^2}{2m} + V(\vec{p} ,t)$ & $\hat{H} = -\frac{\hbar ^2}{2m} \laplacian + \hat{V} (\hat{R},t)$ \\
+		$\vec{L} = \vec{r} \cp \vec{p}$ & $\hat{L} = -i\hbar \hat{R}\cp \grad$ \\
+		\hline
+		\hline
+	\end{tabular}
+\end{table}
 
 
 
