--- a/Programación Matemática 2/Demostracion/demostracion.tex
+++ b/Programación Matemática 2/Demostracion/demostracion.tex
@@ -113,7 +113,7 @@
 	\frametitle{Desarrollo}
 	\onslide<1->{ Tomando $N_1 = ( Q_1 ,\Sigma ,\delta _1 , q_1 ,F_1 )$, y se construye $N = ( Q,\Sigma ,\delta ,q_o ,F )$, donde}
 	\begin{enumerate}
-		\item \onslide<2->{ $Q\cup \{ q_o \}$ }
+		\item \onslide<2->{ $Q = Q_1 \cup \{ q_o \}$ }
 		\item \onslide<3->{ Tomando $q\in Q$ y $a\in \Sigma _\varepsilon$
 				$$ \delta (q,x) = 
 					\left\{\begin{array}{rl}
