--- a/Mecánica Estadística/Tarea1/bibliografia.bib
+++ b/Mecánica Estadística/Tarea1/bibliografia.bib
@@ -1,25 +1,28 @@
-@article{einstein,
-    author =       "Albert Einstein",
-    title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-        [{On} the electrodynamics of moving bodies]",
-    journal =      "Annalen der Physik",
-    volume =       "322",
+@article{fuck,
+    author =       "John E. Freund's",
+    title =        "Mathematical Statistics with Applications",
+    journal =      "Pearson New International Edition",
     number =       "10",
     pages =        "891--921",
     year =         "1905",
     DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
 }
 
-@book{latexcompanion,
-    author    = "Michel Goossens and Frank Mittelbach and Alexander Samarin",
-    title     = "The \LaTeX\ Companion",
-    year      = "1993",
-    publisher = "Addison-Wesley",
-    address   = "Reading, Massachusetts"
+@book{freund,
+    author    = "John E. Freund",
+    title     = "Mathematical Statistics with Applications",
+    year      = "2014",
+    publisher = "Pearson",
 }
 
-@misc{knuthwebsite,
-    author    = "Donald Knuth",
-    title     = "Knuth: Computers and Typesetting",
-    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+@book{blundell,
+    author    = "Stephen J. Blundell and Katherine M. Blundell",
+    title     = "Concepts in Thermal Physics",
+    year      = "2006",
+    publisher = "Department of Physics, University of Oxford, UK",
+}
+
+@misc{wiki,
+    title     = "Wikipedia",
+    url       = "https://es.wikipedia.org/wiki/Wikipedia:Portada"
 }
